--- a/Kalkulator_Walut/AppShell.xaml
+++ b/Kalkulator_Walut/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title="Kalkulator Walut"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
